compiler/testData/diagnostics/tests/cast/bare/UnrelatedIs.kt
trait Tr
trait G<T>

fun test(tr: Tr) = tr is <!NO_TYPE_ARGUMENTS_ON_RHS!>G<!>